--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Pig Dice</title>
   </head>
   <body>
+    <h2>Pig Dice</h2>
+    <p>Press the Roll Dice button to start the game. The game will roll on automatically unless the dice lands on 1. If you want to stop rolling and keep your points press hold, it will then be the other's player turn to play.</p>
 
   </body>
 </html>
