added container to the html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
     <title>Pig Dice</title>
   </head>
   <body>
-    <h2>Pig Dice</h2>
+    <div class="container">
+    <h2 class="jumbotron">Pig Dice</h2>
     <p>Press the Roll Dice button to start the game. The game will roll on automatically unless the dice lands on 1. If you want to stop rolling and keep your points press hold, it will then be the other's player turn to play.</p>
 
+<h2>Player 1</h2>
+    <button type="text" name="button">Roll Dice</button>
+    <button type="text" name="button">Hold</button>
+    <button type="text" name="button">New Game</button>
+
+    <ul class="well"></ul>
+
+    <h2>Player 2</h2>
+</div>
   </body>
 </html>
