added submit buttons to the page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
     <p>Press the Roll Dice button to start the game. The game will roll on automatically unless the dice lands on 1. If you want to stop rolling and keep your points press hold, it will then be the other's player turn to play.</p>
 
 <h2>Player 1</h2>
-    <button type="text" name="button">Roll Dice</button>
-    <button type="text" name="button">Hold</button>
-    <button type="text" name="button">New Game</button>
+    <button type="submit" name="button">Roll Dice</button>
+    <button type="submit" name="button">Hold</button>
+    <button type="submit" name="button">New Game</button>
 
     <ul class="well"></ul>
 
     <h2>Player 2</h2>
+
+    <button type="submit" name="button">Roll Dice</button>
+    <button type="submit" name="button">Hold</button>
+    <button type="submit" name="button">New Game</button>
+
+    <ul class="well"></ul>
+
+
 </div>
   </body>
 </html>
