added color to buttons

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   </head>
   <body>
     <div class="container">
-    <h2 class="jumbotron">Pig Dice</h2>
+    <h2 class="jumbotron bg-danger">Pig Dice</h2>
     <p>Press the Roll Dice button to start the game. The game will roll on automatically unless the dice lands on 1. If you want to stop rolling and keep your points press hold, it will then be the other's player turn to play.</p>
 
 <h2>Player 1</h2>
-    <button type="submit" name="button">Roll Dice</button>
-    <button type="submit" name="button">Hold</button>
-    <button type="submit" name="button">New Game</button>
+    <button type="submit" name="button" class="btn-success">Roll Dice</button>
+    <button type="submit" name="button class="btn-success">Hold</button>
+    <button type="submit" name="button" class="btn-success">New Game</button>
 
     <ul class="well"></ul>
 
     <h2>Player 2</h2>
 
-    <button type="submit" name="button">Roll Dice</button>
-    <button type="submit" name="button">Hold</button>
-    <button type="submit" name="button">New Game</button>
+    <button type="submit" name="button" class="btn-success" >Roll Dice</button>
+    <button type="submit" name="button" class="btn-success">Hold</button>
+    <button type="submit" name="button" class="btn-success">New Game</button>
 
     <ul class="well"></ul>
 
